<?xml version="1.0"?>
<package>
  <name>descartes_tutorial_support</name>
  <version>0.1.0</version>
  <description>Supporting launch files for the Descartes tutorials</description>

  <maintainer email="Jonathan.Meyer@swri.org">Jonathan Meyer</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/descartes/</url>

  <author email="Jonathan.Meyer@swri.org">Jonathan Meyer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- TODO: add run depends for when we settle on a robot model for the training -->

</package>